// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom classes 1`] = `
"<pre class="shiki github-light" style="background-color: #ffffff;"><code><span class="line"><span style="color: #6E7781;">// This is an example of a diff</span></span>
<span class="line add-me"><span style="color: #CF222E;">+</span><span style="color: #24292F;">  </span><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">posts</span><span style="color: #24292F;"> }) {</span></span>
<span class="line remove-me"><span style="color: #CF222E;">-</span><span style="color: #24292F;">  </span><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">entries</span><span style="color: #24292F;"> }) {</span></span>
<span class="line add-me"><span style="color: #CF222E;">+</span><span style="color: #24292F;">    </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (posts.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line remove-me"><span style="color: #CF222E;">-</span><span style="color: #24292F;">    </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (entries.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line"><span style="color: #24292F;">        </span><span style="color: #CF222E;">return</span><span style="color: #24292F;"> &lt;</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt;No posts&lt;/</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt; </span></span>
<span class="line"><span style="color: #24292F;">     }</span></span>
<span class="line"><span style="color: #24292F;">   }</span></span>
<span class="line"></span></code></pre>"
`;

exports[`Custom style colors 1`] = `
"<pre class="shiki github-light" style="background-color: #ffffff;"><code><span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #6E7781;">// This is an example of a diff</span></span>
<span class="line" style="background-color: blue; display: inline-block; width: 100%;"><span style="color: #CF222E;">+</span><span style="color: #24292F;">  </span><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">posts</span><span style="color: #24292F;"> }) {</span></span>
<span class="line" style="background-color: orange; display: inline-block; width: 100%;"><span style="color: #CF222E;">-</span><span style="color: #24292F;">  </span><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">entries</span><span style="color: #24292F;"> }) {</span></span>
<span class="line" style="background-color: blue; display: inline-block; width: 100%;"><span style="color: #CF222E;">+</span><span style="color: #24292F;">    </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (posts.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line" style="background-color: orange; display: inline-block; width: 100%;"><span style="color: #CF222E;">-</span><span style="color: #24292F;">    </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (entries.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">        </span><span style="color: #CF222E;">return</span><span style="color: #24292F;"> &lt;</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt;No posts&lt;/</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt; </span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">     }</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">   }</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"></span></code></pre>"
`;

exports[`Default classes instead of styles 1`] = `
"<pre class="shiki github-light" style="background-color: #ffffff;"><code><span class="line"><span style="color: #6E7781;">// This is an example of a diff</span></span>
<span class="line diff-add"><span style="color: #CF222E;">+</span><span style="color: #24292F;">  </span><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">posts</span><span style="color: #24292F;"> }) {</span></span>
<span class="line diff-remove"><span style="color: #CF222E;">-</span><span style="color: #24292F;">  </span><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">entries</span><span style="color: #24292F;"> }) {</span></span>
<span class="line diff-add"><span style="color: #CF222E;">+</span><span style="color: #24292F;">    </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (posts.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line diff-remove"><span style="color: #CF222E;">-</span><span style="color: #24292F;">    </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (entries.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line"><span style="color: #24292F;">        </span><span style="color: #CF222E;">return</span><span style="color: #24292F;"> &lt;</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt;No posts&lt;/</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt; </span></span>
<span class="line"><span style="color: #24292F;">     }</span></span>
<span class="line"><span style="color: #24292F;">   }</span></span>
<span class="line"></span></code></pre>"
`;

exports[`Default configuration 1`] = `
"<pre class="shiki github-light" style="background-color: #ffffff;"><code><span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #6E7781;">// This is an example of a diff</span></span>
<span class="line" style="background-color: #00ff4051; display: inline-block; width: 100%;"><span style="color: #CF222E;">+</span><span style="color: #24292F;">  </span><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">posts</span><span style="color: #24292F;"> }) {</span></span>
<span class="line" style="background-color: #ff000051; display: inline-block; width: 100%;"><span style="color: #CF222E;">-</span><span style="color: #24292F;">  </span><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">entries</span><span style="color: #24292F;"> }) {</span></span>
<span class="line" style="background-color: #00ff4051; display: inline-block; width: 100%;"><span style="color: #CF222E;">+</span><span style="color: #24292F;">    </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (posts.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line" style="background-color: #ff000051; display: inline-block; width: 100%;"><span style="color: #CF222E;">-</span><span style="color: #24292F;">    </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (entries.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">        </span><span style="color: #CF222E;">return</span><span style="color: #24292F;"> &lt;</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt;No posts&lt;/</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt; </span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">     }</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">   }</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"></span></code></pre>"
`;

exports[`Line numbers instead of RegEx 1`] = `
"<pre class="shiki github-light" style="background-color: #ffffff;"><code><span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #6E7781;">// This is an example of a diff</span></span>
<span class="line" style="background-color: #00ff4051; display: inline-block; width: 100%;"><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">posts</span><span style="color: #24292F;"> }) {</span></span>
<span class="line" style="background-color: #ff000051; display: inline-block; width: 100%;"><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">entries</span><span style="color: #24292F;"> }) {</span></span>
<span class="line" style="background-color: #00ff4051; display: inline-block; width: 100%;"><span style="color: #24292F;">  </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (posts.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line" style="background-color: #ff000051; display: inline-block; width: 100%;"><span style="color: #24292F;">  </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (entries.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">     </span><span style="color: #CF222E;">return</span><span style="color: #24292F;"> &lt;</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt;No posts&lt;/</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt; </span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">  }</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">}</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"></span></code></pre>"
`;

exports[`Theme colors for styles 1`] = `
"<pre class="shiki github-light" style="background-color: #ffffff;"><code><span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #6E7781;">// This is an example of a diff</span></span>
<span class="line" style="background-color: #6fdd8b66; display: inline-block; width: 100%;"><span style="color: #CF222E;">+</span><span style="color: #24292F;">  </span><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">posts</span><span style="color: #24292F;"> }) {</span></span>
<span class="line" style="background-color: #ffaba866; display: inline-block; width: 100%;"><span style="color: #CF222E;">-</span><span style="color: #24292F;">  </span><span style="color: #CF222E;">function</span><span style="color: #24292F;"> </span><span style="color: #8250DF;">Blog</span><span style="color: #24292F;">({ </span><span style="color: #953800;">entries</span><span style="color: #24292F;"> }) {</span></span>
<span class="line" style="background-color: #6fdd8b66; display: inline-block; width: 100%;"><span style="color: #CF222E;">+</span><span style="color: #24292F;">    </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (posts.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line" style="background-color: #ffaba866; display: inline-block; width: 100%;"><span style="color: #CF222E;">-</span><span style="color: #24292F;">    </span><span style="color: #CF222E;">if</span><span style="color: #24292F;"> (entries.</span><span style="color: #0550AE;">length</span><span style="color: #24292F;"> </span><span style="color: #CF222E;">===</span><span style="color: #24292F;"> </span><span style="color: #0550AE;">0</span><span style="color: #24292F;">) {</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">        </span><span style="color: #CF222E;">return</span><span style="color: #24292F;"> &lt;</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt;No posts&lt;/</span><span style="color: #116329;">p</span><span style="color: #24292F;">&gt; </span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">     }</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"><span style="color: #24292F;">   }</span></span>
<span class="line" style="background-color: transparent; display: inline-block; width: 100%;"></span></code></pre>"
`;
